Historico de cambios de estado - front y back

--- a/src/app/views/pages/evento/registro-evento/modal-detalle/modal-detalle.component.html
+++ b/src/app/views/pages/evento/registro-evento/modal-detalle/modal-detalle.component.html
@@ -23,9 +23,9 @@
         <tr *ngFor="let detalle of listDetalle; let i = index">
           <td>{{ detalle.aplicacion }}</td>
           <td>{{ detalle.codigo_ticket_generado }}</td>
-          <td>{{ detalle.notas }}</td>
+          <td style="text-align: left">{{ detalle.notas }}</td>
           <td>{{ detalle.servicios }}</td>
-          <td>{{ detalle.hora_generacion }}</td>
+          <td style="min-width: 95px">{{ detalle.hora_generacion }}</td>
           <td>{{ detalle.estado }}</td>
         </tr>
       </tbody>
