Estilos en Login

--- a/src/app/layout/user-panel/user-panel.component.html
+++ b/src/app/layout/user-panel/user-panel.component.html
@@ -5,10 +5,10 @@
   <div class="up-title">{{ "Perfil de usuario" }}</div>
 
   <div class="up-name-card">
-    <!-- <div class="up-photo-cont">
+    <div class="up-photo-cont">
       <div *ngIf="phtouri == 'NONE'">{{ nameini }}</div>
-      <img *ngIf="phtouri != 'NONE'" [src]="phtouri" />
-    </div> -->
+      <!-- <img *ngIf="phtouri != 'NONE'" [src]="phtouri" /> -->
+    </div>
     <div class="up-card-info">
       <div class="up-user-name">{{ fullname }}</div>
       <div class="up-user-subtitle">
