--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -2,7 +2,8 @@
 
 <div class="form-card">
   <div class="login-form">
-    <img class="logo" src="../../../assets/images/logos/log2.svg" />
+    <!-- <img class="logo" src="http://gestorqa.indratools.net/public/imagen/proyecto/logo_indrac.png" /> -->
+    <img class="logo" src="../../../assets/images/logos/storj.svg" />
     <div class="title-login">
       <div class="c-male">Bienvenido a la web</div>
       <div style="margin-top: 10px; font-weight: 200;">Sistema<span style="font-weight: 700"> NOC</span></div>
@@ -41,3 +42,5 @@
     </form>
   </div>
 </div>
+
+
