--- a/src/app/views/auth/login/login.component.scss
+++ b/src/app/views/auth/login/login.component.scss
@@ -1,5 +1,5 @@
 .view-backgrond {
-  background-image: url("../../../../assets/images/background/person3.jpg");
+  background-image: url("https://i.imgur.com/ZbqegxM.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 1.7;
@@ -21,7 +21,6 @@
 .login-form {
   display: flex;
   flex-direction: column;
-  // align-items: center;
   justify-content: center;
 
   margin-top: 20%;
@@ -43,7 +42,7 @@
 }
 
 .logo {
-  height: 65px;
+  height: 45px;
   margin-block: 10px;
 }
 
