--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,13 +5,16 @@
   <div class="logoheader">
     <img class="hlogo" src="../../../assets/images/logos/noc-header.svg" />
     <div class="logo-let" style="color: #FFF">
-      <div style="font-weight: 200">Sistema<span style="font-weight: 700"> NOC</span></div>
+      <div style="font-weight: 200">Sistema <span style="font-weight: 700"><span style="color:#00bcd4"> N</span>OC</span></div>
     </div>
   </div>
   <div class="header-nav-items"></div>
   <div class="row">
     <div class="personname" style="color: #555555">
       {{ currentUser | uppercase }}
+      <br>
+      <div class="cli-rol col-sm-12 cli-btn" style="font-size: 12px; font-weight: 400; margin-top: -11px;"><mat-icon class="icon-13">person</mat-icon> {{userRolName}}</div>
+
     </div>
   </div>
   <app-user-section [photouri]="phtouri" [nameini]="nameini"></app-user-section>
