Fecha de resolucion corregido - UPDATE

--- a/src/app/views/pages/mantenimiento/entidad/entidad.component.html
+++ b/src/app/views/pages/mantenimiento/entidad/entidad.component.html
@@ -83,12 +83,12 @@
                     ><mat-icon class="icon-13">edit</mat-icon>
                   </button>
 
-                  <button
+                  <!-- <button
                     matTooltip="Eliminar"
                     class="icon-btn btn-trans c-fucsia"
                     (click)="abrirEliminarEntidad(entidad.id_tabla, entidad.id_correlativo, entidad.nombre)"
                     ><mat-icon class="icon-13">delete_forever</mat-icon>
-                  </button>
+                  </button> -->
                 </div>
               </td>
               <td class="w90">{{ entidad.id_tabla }}</td>
